Name:                haskell-spdy
Version:             0.0.1
Synopsis:            Write SPDY webservers in Haskell.
Description:         This library allows you to write SPDY (v2) servers in Haskell.

License:             BSD3
License-file:        LICENSE
Author:              Robin Brandt
Maintainer:          robin@evernet2000.de
Copyright:           (c) 2012 Robin Brandt
Category:            Network
Build-type:          Simple

Cabal-version:       >=1.2

Library
  Exposed-modules:     
    Network.SPDY
  
  -- Packages needed in order to build this package.
  Build-depends:
      base		>= 3 && < 5
    , binary-strict	>= 0.4 && < 0.5
    , bytestring	>= 0.9 && < 0.10
    , containers	>= 0.4 && < 0.5
    , ghc-binary	>= 0.5 && < 0.6
    , network		>= 2.3.0
    , utf8-string	>= 0.3
    , zlib-bindings	>= 0.0.2 && < 0.1
  
Executable test
  main-is:        tests/TestSuite.hs

  Build-depends:
      base			>= 3 && < 5
    , test-framework		>= 0.4.2 && < 0.5
    , test-framework-hunit	>= 0.2.0 && < 0.5
    , HUnit			>= 1.2.0 && < 2
 

  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
